--- a/bibliography.bib
+++ b/bibliography.bib
@@ -255,11 +255,16 @@ year={2015}
 	Title="{Developing Medical Device Software to IEC 62304}",
 	year={2010}
 	}
-	
+	@book{Vogel,
+	Author="{David A. Vogel}",
+	Title="{Medical Devices Software: Verification, Validation and Compliance}",
+	publisher={Artech House},
+	year={2011}
+	}
 @article{fda2,
 	Author = {US FDA},
 	Journal = {Center for Devices and Radiological Health},
-	Title = {{General Principles of Software Validation; Final Guidance for Industry and FDA Staff}},
+	Title = {General Principles of Software Validation; Final Guidance for Industry and FDA Staff},
 	Year = {2002}}
 
 @article{fda3,
